fixed github icon not showing after relative path changes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1218,7 +1218,6 @@ div.tag-cloud{
     width: 20px;
     height: 20px;
     margin-right: 4px;
-    background-image: url(./assets/img/icons/github_fill.svg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     display: block;
